# yakuzaishi

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
.github/workflows/: build-macos.yml  build-windows.yml
assets/: display_config.ron  key_bindings.ron
assets/key_bindings/: menu_bindings.ron  pedestrian_bindings.ron  vehicle_bindings.ron
assets/map_data/: Water_Ocean.tsx  ocean_animated.tmx  ocean_map.tmx  road_tilemap_1.tmx  road_tileset.tsx  small_map.tmx  water.tmx  water.tsx
assets/shader_data/: fog.wgsl  practice.wgsl  practice_fog.wgsl
assets/shaders/: mode7.cpp  mode7.wgsl  mode7_b.wgsl  mode7_frustum.wgsl  reflections.wgsl
assets/sprite_data/: brown_civic.json  brown_civic_sprite_sheet.ron  racoon_walk_spritesheet.ron  sprite_sheet.ron  texturepacker_json_to_ron_script.py  vehicle_spritesheet.ron
examples/: camera_3d_angled.rs  camera_3d_top_down.rs  ds_reflection.rs  mode7.rs  two_3d_camera_pass.rs  two_passes.rs
reference_code_snippets/: simple_3d_test.rs
resources/: bindings.ron  sprite_sheet.ron
resources/maps/: map.tmx  map1.txt  map_gen.py  road_tilesheet.tsx
resources/sprites/: car.txt  unused.piskel
src/: asset_loader.rs  bundles.rs  camera.rs  game_map.rs  game_state.rs  input_system.rs  kinetic_components.rs  lib.rs  main.rs  map.rs  spawner.rs  states.rs  util.rs  vehicle.rs  vehicle_controller.rs  vehicle_sprite_sheet.rs  world.rs  yakuzaishi_util.rs
src/anime/: anime_component.rs  anime_components.rs  anime_res.rs  attach_animations.rs  character_anime_sys.rs  environment_anime_sys.rs  insert_animations.rs  map_anime_sys.rs  mod.rs  overlay_animations.rs  overlay_anime_sys.rs  tile_animations.rs
src/audio/: audio_res.rs  audio_sys.rs  mod.rs
src/camera/: camera.rs  camera_2d_sys.rs  camera_3d_sys.rs  camera_components.rs  camera_sys.rs  mod.rs
src/command_buffer/: command_buffer.rs  command_log.rs  mod.rs  (+1 more)
tests/: test_spawner.rs  test_vehicle_spawner_system.rs  vehicle_controller_integration_test.rs
(+181 files in other folders)
