[package]
name = "yakuzaishi"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]

bevy = { version = "0.14.2" }

bevy_render = "0.14.2"
bevy_asset = "0.14.2"

bevy_ecs_tilemap = "0.14.0"
tiled = "0.12.0"
rand = "0.8.4"
thiserror = "1.0.58"
futures-lite = "2.3.0"
bevy-inspector-egui = "0.27.0"
tracy-client = "0.17.0"
bevy_asset_loader = "0.21.0"
